recents pages done

--- a/ydisk_skillbox/SkillboxDrive.xcodeproj/xcshareddata/xcschemes/SkillboxDrive.xcscheme
+++ b/ydisk_skillbox/SkillboxDrive.xcodeproj/xcshareddata/xcschemes/SkillboxDrive.xcscheme
@@ -50,6 +50,23 @@
             ReferencedContainer = "container:SkillboxDrive.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "CG_NUMERICS_SHOW_BACKTRACE"
+            value = "1"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "CGPostError"
+            value = "1"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "CG_PDF_VERBOSE"
+            value = "1"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
